<resources>
    <string name="app_name">Clear List</string>
    <string name="default_list">Clear List</string>
    <string name="cant_remove">Can not remove default group</string>
    <string name="groups">Groups</string>
    <string name="today">Today</string>
    <string name="tommorow">Tomorrow</string>
    <string name="setting">Setting</string>
    <string name="theme">Theme</string>
    <string name="sound">Sounds</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="version">Version</string>
    <string name="reminder">Reminder</string>
    <string name="edit_group">Edit Group</string>
    <string name="default_group_title">Default</string>
    <string name="setting_backup">Backup &amp; Restore</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_failed">Backup failed</string>
    <string name="backup_success">Backup success</string>
    <string name="backing_up">Backing Up</string>
    <string name="restore_failed">Restore failed</string>
    <string name="restore_success">Restore success</string>
    <string name="restore_empty">No backup file</string>

    <string name="confirm">Confirm</string>
    <string name="delete">Delete backup</string>
    <string name="restore_tip">Restore will wipe your current data, Please backup first!</string>
    <string name="done">DONE</string>
    <string name="doing">UNDONE</string>
    <string name="delete_item">DELETE</string>

    <string name="title_hint">Title</string>
    <string name="content_hint">Content</string>
    <string name="day_diff">%d days ago</string>

    <string name="permission_rationable_title">Require Permission</string>
    <string name="permission_rationable_text">Clear List will save your backup data on sdcard, Please grant the permission</string>

    <string name="font_size_title">Font size</string>
    <string name="font_size_small">Small</string>
    <string name="font_size_normal">Normal</string>
    <string name="font_size_large">Large</string>

    <string name="group_all">All</string>
</resources>
