<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:gravity="center"
        android:text="@string/font_size_small" />

    <TextView
        android:id="@+id/txt_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"
        android:gravity="center"
        android:text="@string/font_size_normal" />

    <TextView
        android:id="@+id/txt_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:text="@string/font_size_large" />

    <View
        android:layout_width="1px"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seek_bar"
        android:layout_alignTop="@+id/seek_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="#000" />

    <View
        android:layout_width="1px"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seek_bar"
        android:layout_alignTop="@+id/seek_bar"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="#000" />

    <View
        android:layout_width="1px"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seek_bar"
        android:layout_alignTop="@+id/seek_bar"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="#000" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progressTint="@color/transparent"
        android:layout_below="@id/txt_normal" />

</merge>